--- a/src/components/search-bar/search-bar.style.scss
+++ b/src/components/search-bar/search-bar.style.scss
@@ -18,7 +18,9 @@
         height: 40px;
         color: white;
         background-color: black;
+        outline: none;
         border-radius: 0px 10px 10px 0px;   
         border: 1px solid black;
+        cursor: pointer;
     }
 }
