JobItem component and style it

--- a/src/components/search-bar/search-bar.style.scss
+++ b/src/components/search-bar/search-bar.style.scss
@@ -23,4 +23,11 @@
         border: 1px solid black;
         cursor: pointer;
     }
+
+    .job-container{
+        margin: 20px 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
