--- a/src/components/job-item/job-item.style.scss
+++ b/src/components/job-item/job-item.style.scss
@@ -1,8 +1,15 @@
+.bg1{
+    background-color: rgba(233, 232, 231, 0.507);
+}
+
+.bg2{
+    background-color: rgba(97, 97, 97, 0.726);
+}
+
 .job-item{
         width: 80%;
         max-width: 800px;
 /*         height: 150px; */
-        background-color: rgba(233, 232, 231, 0.507);
         border: 1px solid black;
         margin: 5px;
         padding: 15px;
