--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
 /*   background-color: rgba(157, 159, 167, 0.521); */
+  /* background-image: url('http://www.allwhitebackground.com/images/5/Green-Background-Images-HD.jpg'); */
 }
 
 code {
