--- a/src/components/job-item/job-item.style.scss
+++ b/src/components/job-item/job-item.style.scss
@@ -1,9 +1,13 @@
 .bg1{
     background-color: rgba(233, 232, 231, 0.507);
+    /* background-color: #708EA4;
+    color: #FFFBAA; */
 }
 
 .bg2{
-    background-color: rgba(97, 97, 97, 0.726);
+    background-color: rgba(153, 152, 151, 0.507);
+/*     background-color: #FFAEAA;
+    color: #FFFBAA; */
 }
 
 .job-item{
