--- a/src/components/job-item/job-item.style.scss
+++ b/src/components/job-item/job-item.style.scss
@@ -10,6 +10,11 @@
     color: #FFFBAA; */
 }
 
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
 .job-item{
         width: 80%;
         max-width: 800px;
