--- a/src/components/search-bar/search-bar.style.scss
+++ b/src/components/search-bar/search-bar.style.scss
@@ -29,5 +29,18 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        .visto{
+            margin: 10px;
+            display: flex;
+            flex-direction: row;
+
+            .green-box{
+                margin: 0px 10px 0px 0px;
+                width: 20px;
+                height: 20px;
+                background-color: rgba(0, 128, 0, 0.507);
+            }
+        }
     }
 }
